<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre del Local -->
        <TextView
            android:id="@+id/tvNombreLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_local"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <!-- Dirección -->
        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_direccion"
            android:textSize="16sp"
            android:padding="8dp"/>

        <!-- Descripción -->
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_descripcion"
            android:textSize="16sp"
            android:padding="8dp"/>

        <!-- Tipo de Local -->
        <TextView
            android:id="@+id/tvTipoLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo_local"
            android:textSize="16sp"
            android:padding="8dp"/>

        <!-- Horario -->
        <TextView
            android:id="@+id/tvHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_horario"
            android:textSize="16sp"
            android:padding="8dp"/>

        <!-- Teléfono -->
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_telefono"
            android:textSize="16sp"
            android:padding="8dp"/>

        <!-- Coordenadas GPS -->
        <TextView
            android:id="@+id/tvCoordenadasGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_coordenadas_gps"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>
</ScrollView>
