<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DetalleLocalActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nombre del Local -->
            <TextView
                android:id="@+id/labelNombreLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Nombre del local"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/nombreLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre_local"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelNombreLocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Dirección -->
            <TextView
                android:id="@+id/labelDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Dirección"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/nombreLocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/direccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_direccion"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelDireccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Descripción -->
            <TextView
                android:id="@+id/labelDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Descripción"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/direccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_descripcion"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelDescripcion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Tipo de Local -->
            <TextView
                android:id="@+id/labelTipoLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Tipo de local"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/descripcion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tipoLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_tipo_local"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelTipoLocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Horario -->
            <TextView
                android:id="@+id/labelHorario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Horario"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tipoLocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/horario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_horario"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelHorario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Teléfono -->
            <TextView
                android:id="@+id/labelTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Teléfono"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/horario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_telefono"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelTelefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Coordenadas GPS -->
            <TextView
                android:id="@+id/labelCoordenadasGPS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Coordenadas GPS"
                android:textColor="#59AFFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/telefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/coordenadasGPS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_coordenadas_gps"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/labelCoordenadasGPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
